--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <sonar.host.url>http://34.93.52.211:9085</sonar.host.url>
+    <sonar.host.url>ipadder:9000</sonar.host.url>
     <sonar.login>prerana</sonar.login>
     <sonar.password>Prerana@30</sonar.password>
     <!-- JaCoCo Properties -->
