--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <sonar.host.url>http://34.93.52.211:9085</sonar.host.url>
-    <sonar.login>prerana</sonar.login>
+    <sonar.host.url>http://34.93.52.211:9000</sonar.host.url>
+    <sonar.login>admin</sonar.login>
     <sonar.password>Prerana@30</sonar.password>
     <!-- JaCoCo Properties -->
     <jacoco.version>0.8.6</jacoco.version>
@@ -55,7 +55,7 @@
     <snapshotRepository>
        <id>nexus</id>
       <!-- <url>http://34.93.52.211:8081/nexus/content/repositories/snapshots</url> -->
-           <url>http://34.93.52.211:8081/repository/maven-snapshots</url>
+	              <url>http://34.93.52.211:8081/repository/maven-snapshots</url>
     </snapshotRepository>
     <repository>
       <id>nexus</id>
